--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,6 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "pytest (>=8.4.2,<9.0.0)"
+    "pytest (>=8.4.2,<9.0.0)",
+    "ruff (>=0.13.3,<0.14.0)"
 ]
