Corrige nombre del directorio proyectotfg

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/checkout@v4
       - run: pipx install ruff
       - name: Lint (ruff check)
-        run: ruff check proyecto_tfg tests
+        run: ruff check proyectotfg tests
       - name: Format consistency (ruff format --check)
-        run: ruff format --check proyecto_tfg tests
+        run: ruff format --check proyecto_fg tests
