Añade dependencias para scraping

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "sqlmodel (>=0.0.27,<0.0.28)"
+    "sqlmodel (>=0.0.27,<0.0.28)",
+    "requests (>=2.32.5,<3.0.0)",
+    "beautifulsoup4 (>=4.14.2,<5.0.0)"
 ]
 
 
