--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.10"
 dependencies = [
     "sqlmodel (>=0.0.27,<0.0.28)",
     "requests (>=2.32.5,<3.0.0)",
-    "beautifulsoup4 (>=4.14.2,<5.0.0)"
+    "beautifulsoup4 (>=4.14.2,<5.0.0)",
+    "flask (>=3.1.2,<4.0.0)"
 ]
 
 
