--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,28 @@
-[tool.poetry]
+[project]
 name = "heraldica"
 version = "0.1.0"
 description = ""
-authors = ["Luzía <luciaglsn@correo.ugr.es>"]
+authors = [
+    { name = "Luzía", email = "luciaglsn@correo.ugr.es" }
+]
 readme = "README.md"
-package-mode = false
+requires-python = ">=3.10,<4.0"
+dependencies = [
+    "sqlmodel >=0.0.27,<0.0.28",
+    "requests >=2.32.5,<3.0.0",
+    "beautifulsoup4 >=4.14.2,<5.0.0",
+    "flask >=3.1.2,<4.0.0"
+]
 
-[tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-sqlmodel = ">=0.0.27,<0.0.28"
-requests = ">=2.32.5,<3.0.0"
-beautifulsoup4 = ">=4.14.2,<5.0.0"
-flask = ">=3.1.2,<4.0.0"
+[project.optional-dependencies]
+dev = [
+    "pytest >=8.4.2,<9.0.0",
+    "ruff >=0.13.3,<0.14.0"
+]
 
-[tool.poetry.group.dev.dependencies]
-pytest = ">=8.4.2,<9.0.0"
-ruff = ">=0.13.3,<0.14.0"
-
-[tool.poetry.scripts]
+[project.scripts]
 app = "heraldica.ui_web:run"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[dependency-groups]
-dev = [
-    "pytest (>=8.4.2,<9.0.0)",
-    "ruff (>=0.13.3,<0.14.0)"
-]
-
-[tool.poetry]
-#package-mode = false
-
-[project.scripts]
-app = "heraldica.ui_web:run"
