Añade scripts para ejecutar como tareas de Poetry #115

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ dev = [
 [project.scripts]
 app = "heraldica.ui_web:run"
 app_debug = "heraldica.ui_web:run_debug"
+lint = "heraldica.scripts:lint"
+format = "heraldica.scripts:format_code"
+test = "heraldica.scripts:test"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
