--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,15 @@ readme = "README.md"
 requires-python = ">=3.10,<4.0"
 dependencies = [
     "sqlmodel >=0.0.27,<0.0.28",
-    "requests >=2.32.5,<3.0.0",
-    "beautifulsoup4 >=4.14.2,<5.0.0",
     "flask >=3.1.2,<4.0.0"
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest >=8.4.2,<9.0.0",
-    "ruff >=0.13.3,<0.14.0"
+    "ruff >=0.13.3,<0.14.0",
+    "beautifulsoup4 >=4.14.2,<5.0.0",
+    "requests >=2.32.5,<3.0.0"
 ]
 
 [project.scripts]
